Fixed header flex alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -446,7 +446,7 @@ footer .copyright-container {
         width          : 100%;
         display        : flex;
         flex-direction : column;
-        justify-content: flex-start;
+        align-items    : flex-start;
         gap            : 10px;
     }
 
